# AI-threat-Modeling-

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: docker-compose.yml  k8s-deployment.yaml  openapi-spec.yaml
policies/: ci.yml  default.yaml  default.yml
src/: __init__.py  cli.py
src/graph/: __init__.py  assets.py  export.py  flows.py
src/llm/: __init__.py  guardrails.py  prompts.py
src/mitre/: __init__.py  mapping.py
src/mitre/data/: techniques.json
src/parsers/: __init__.py  compose.py  k8s.py  openapi.py
src/reporting/: __init__.py  pdf.py  sarif.py
src/rules/: __init__.py  stride.py  trust_boundaries.py
src/scoring/: __init__.py  engine.py
tests/: test_cli_outputs.py  test_export.py  test_graph.py  test_llm.py  test_mitre.py  test_parsers.py  test_reporting.py  test_rules.py  test_scoring.py
